fix (Second Step): Correct gap amount in desktop

--- a/css/second-step/mobile.css
+++ b/css/second-step/mobile.css
@@ -1,3 +1,11 @@
 h2 + div {
   position: relative;
 }
+
+.main-container {
+  --gap-amount: 2rem;
+}
+
+.standard-list {
+  margin-bottom: 2.5rem;
+}
